--- a/signin/index.html
+++ b/signin/index.html
@@ -52,7 +52,6 @@
 
   <!-- HEADER -->
   <header>
-
     <div class="inner">
 
       <a href="/" class="logo">
@@ -377,36 +376,60 @@
     </div>
   </header>
 
-     <!-- FOOTER -->
-     <footer>
-      <div class="inner">
-        <ul class="menu">
-          <li><a href="javascript:void(0)" class="orange">개인정보처리방침</a></li>
-          <li><a href="javascript:void(0)">영상정보처리기기 운영관리 방침</a></li>
-          <li><a href="javascript:void(0)">홈페이지 이용약관</a></li>
-          <li><a href="javascript:void(0)">위치정보 이용약관</a></li>
-          <li><a href="javascript:void(0)">카드 이용약관</a></li>
-          <li><a href="javascript:void(0)">윤리경영 핫라인</a></li>
-        </ul>
-        <div class="btn-group">
-          <a href="javascript:void(0)" class="btn btn--white">찾아오시는 길</a>
-          <a href="javascript:void(0)" class="btn btn--white">신규입점제의</a>
-          <a href="javascript:void(0)" class="btn btn--white">사이트 맵</a>
-        </div>
-        <div class="info">
-          <span>사업자등록번호 123-45-678901</span>
-          <span>(주)샤이르나커피 코리아</span>
-          <span>TEX : 02) 1234-5678 / FAX : 02) 1234-5678</span>
-          <span>개인정보 책임자 : 박영웅</span>
-        </div>
+  <!--SIGN IN-->
+  <section class="signin">
+    <h1>로그인</h1>
+    <div class="signin__card">
+      <h2>샤이르나 커피에 오신 것을 환영합니다.</h2>
+      <form>
+        <input type="text" placeholder="아이디를 입력하세요." />
+        <input type="password" placeholder="비밀번호를 입력하세요." />
+        <button type="submit" class="btn bnt--primary block">로그인</button>
+        <p>
+          비밀번호를 타 사이트와 같이 사용할 경우 도용 위험이 있으니,<br />
+          정기적으로 비밀 번호를 변경하세요!
+        </p>
+      </form>
+      <div class="actions">
+        <a href="javascript:void(0)">회원가입</a>
+        <a href="javascript:void(0)">아이디 찾기</a>
+        <a href="javascript:void(0)">비밀번호 찾기</a>
       </div>
 
-      <p class="copyright">
-        &copy; <span class="this-year"></span>
-        Shiluna Coffee Company. All Rights Reserved.
-      </p>
-      <img src="../images/logo_text.png" alt="SHILUNA COFFEE" class="logo" />
-     </footer>
+    </div>
+
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+  <div class="inner">
+    <ul class="menu">
+      <li><a href="javascript:void(0)" class="orange">개인정보처리방침</a></li>
+      <li><a href="javascript:void(0)">영상정보처리기기 운영관리 방침</a></li>
+      <li><a href="javascript:void(0)">홈페이지 이용약관</a></li>
+      <li><a href="javascript:void(0)">위치정보 이용약관</a></li>
+      <li><a href="javascript:void(0)">카드 이용약관</a></li>
+      <li><a href="javascript:void(0)">윤리경영 핫라인</a></li>
+    </ul>
+    <div class="btn-group">
+      <a href="javascript:void(0)" class="btn btn--white">찾아오시는 길</a>
+      <a href="javascript:void(0)" class="btn btn--white">신규입점제의</a>
+      <a href="javascript:void(0)" class="btn btn--white">사이트 맵</a>
+    </div>
+    <div class="info">
+      <span>사업자등록번호 123-45-678901</span>
+      <span>(주)샤이르나커피 코리아</span>
+      <span>TEX : 02) 1234-5678 / FAX : 02) 1234-5678</span>
+      <span>개인정보 책임자 : 박영웅</span>
+    </div>
+  </div>
+
+  <p class="copyright">
+    &copy; <span class="this-year"></span>
+    Shiluna Coffee Company. All Rights Reserved.
+  </p>
+  <img src="../images/logo_text.png" alt="SHILUNA COFFEE" class="logo" />
+  </footer>
 
 
 </body>
